# nico-server

./: .env.example  .gitignore  MIGRATION.md  main.py  requirements.txt
nico-bot/: config.yaml  executor.py  main.py  requirements.txt
nico-core/: compare_strategies.py  config.yaml  generate_sample_data.py  monitor.py  output.json  pyproject.toml  run.py  run_3m_test.py  run_live.py  server.py  setup.sh
nico-core/nico_core/: __init__.py  alpaca_execution.py  combined_strategy.py  data.py  dca.py  regime.py  state_client.py
nico-core/nico_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nico-server/: Dockerfile  main.py  requirements.txt  state_store.py
