[project]
name = "nico-core"
version = "0.1.0"
description = "Observable Markov Regime Model for Nico Trading Assistant"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
hmm = ["hmmlearn>=0.3"]
# Robinhood MCP execution backend (NICO_EXECUTION_BACKEND=robinhood_mcp)
robinhood = ["mcp>=1.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nico_core*"]
